--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.17.3",
+    "npm": "6.14.13"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r esm server.js",
-    "client-install": "yarn add --prefix client",
+    "client-install": "npm install --prefix client",
     "server": "nodemon server.js",
-    "client": "yarn start --prefix client",
-    "dev": "concurrently\"yarn run server\" \"yarn run client\""
+    "client": "npm start --prefix client",
+    "dev": "concurrently\"npm run server\" \"npm run client\"",
+    "start": "node server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
